--- a/mint-app/styles/Home.module.css
+++ b/mint-app/styles/Home.module.css
@@ -1,60 +1,45 @@
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
   height: 100vh;
+  overflow-y: scroll;
+}
+
+.header {
+  padding: 5rem 8rem 1rem 8rem;
+  background: var(--pink);
+  color: var(--blue);
+  width: 100%;
+  border-top: 2px solid var(--red); 
+  border-bottom: 2px solid var(--red);
+  min-height: 300px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.buttonContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .main {
-  padding: 5rem 0;
-  flex: 0;
+  flex-shrink: 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.form {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
+  width: 100%;;
+  overflow: hidden;
 }
 
-.form label {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 1rem;
-  height: 60px;
-}
-
-.form label span {
-  margin-bottom: 6px;
-}
-
-.form textarea {
-  width: 100%;
-}
-
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
 
 .title {
   margin: 0;
@@ -62,13 +47,35 @@
   font-size: 4rem;
 }
 
-.title,
-.description {
-  text-align: center;
-}
-
 .description {
   line-height: 1.5;
   font-size: 1.5rem;
+  margin: 6px 0;
 }
 
+.article {
+  padding: 3rem 10rem 5rem 10rem;
+  position: relative;
+  flex-shrink: 0;
+  overflow-y: scroll;
+  width: 100%;
+}
+
+.mintRow {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr) );
+  grid-gap: 2rem;
+  justify-content: space-between;
+}
+
+
+@media only screen  and (max-width : 768px) {
+  .header {
+    padding: 3rem 2rem 1rem 2rem;
+  }
+  .article {
+    padding: 3rem 2rem 5rem 2rem;
+  }
+  
+}
+  
