--- a/mint-app/components/Button/styles.module.css
+++ b/mint-app/components/Button/styles.module.css
@@ -4,7 +4,7 @@
   background: transparent;
   font-size: 14px;
   border: none;
-  background-color: var(--pink);
+  background-color: var(--red);
   color: white;
   border-radius: 2px;
   padding: 10px 40px;
