--- a/mint-app/components/Mint/styles.module.css
+++ b/mint-app/components/Mint/styles.module.css
@@ -7,6 +7,7 @@
   align-items: flex-start;
   background: var(--light-blue);
   border-radius: 16px;
+  box-shadow: 12px 12px 0px var(--red);
 }
 
 
