--- a/mint-app/styles/Home.module.css
+++ b/mint-app/styles/Home.module.css
@@ -8,50 +8,26 @@
   overflow-y: scroll;
 }
 
-.header {
-  padding: 5rem 8rem 1rem 8rem;
-  background: var(--pink);
-  color: var(--blue);
+.headline {
   width: 100%;
-  border-top: 2px solid var(--red); 
-  border-bottom: 2px solid var(--red);
-  min-height: 300px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.buttonContainer{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.main {
-  flex-shrink: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  width: 100%;;
-  overflow: hidden;
+.headline > h1 {
+  font-size: 6rem;
+  margin: 6rem 0 1rem 0;
+  text-shadow: 4px 4px 0px var(--light-blue);
+
 }
 
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+.headline > p {
+  color: var(--blue);
+  font-size: 2rem;
 }
 
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-  margin: 6px 0;
-}
 
 .article {
   padding: 3rem 10rem 5rem 10rem;
@@ -68,11 +44,22 @@
   justify-content: space-between;
 }
 
+.blitColumn {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 42px;
+}
 
 @media only screen  and (max-width : 768px) {
-  .header {
-    padding: 3rem 2rem 1rem 2rem;
-  }
   .article {
     padding: 3rem 2rem 5rem 2rem;
   }
