--- a/mint-app/styles/Home.module.css
+++ b/mint-app/styles/Home.module.css
@@ -59,6 +59,10 @@
   margin-bottom: 42px;
 }
 
+.footer > p {
+  color: var(--blue);
+}
+
 @media only screen  and (max-width : 768px) {
   .article {
     padding: 3rem 2rem 5rem 2rem;
